--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "author": "NhiDeveloper",
+  "description": "Dự án Website truyện tranh",
+  "engines": {
+    "node": "18.18.2"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
