--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.5",
     "clsx": "^2.1.0",
+    "postcss-nesting": "^12.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
