--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-loading-skeleton": "^3.4.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
-    "swiper": "^11.0.6"
+    "swiper": "^11.0.6",
+    "use-media": "^1.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
